Clean up xrid error logging

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         menuMesh.urlMesh.updateText();
       };
       xrid.onerror = err => {
-        console.warn(err.stack);
+        console.warn(err.error);
       };
       user = {
         name: usernameState.text,
