Use https for registry url

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       return null;
     };
 
-    const REGISTRY_QUERY_URL = 'http://registry.webmr.io/q';
+    const REGISTRY_QUERY_URL = 'https://registry.webmr.io/q';
     const SIDES = ['left', 'right'];
     const FLOOR_SIZE = 20;
     const RAY_COLOR = 0x44c2ff;
