--- a/index.html
+++ b/index.html
@@ -2122,6 +2122,12 @@
         }
       } else {
         switch (e.which) {
+          case 120: { // X
+            for (let i = 0; i < controllerOffsets.length; i++) {
+              controllerOffsets[i].set(0, 0, 0);
+            }
+            break;
+          }
           case 105: { // I
             console.log('enable VR');
 
